Footer logo and menu align fix

--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,39 +1,32 @@
 .footer_logo {
     border: 1px solid red;
     flex-basis: 20%;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
+    align-self: flex-end;
+    text-align: center;
+    margin: 2vh 0 0 0;
 }
-
-    .footer_logo .footer_logo_inner {
-        text-align: center;
-        margin: 2vh 0 0 0;
+    .footer_logo a img {
+        height: 20vh;
+        vertical-align: bottom;
     }
-            .footer_logo a img {
-                height: 20vh;
-                vertical-align: bottom;
-            }
 
 .footer_menu {
     border: 1px solid red;
-    display: flex;
     flex-basis: 30%;
-    align-items: center;
+    align-self: center;
 }
     .footer_menu ul {
         border: 1px solid red;
         display:flex;
         flex-wrap: wrap;
         padding-inline-start: 0;
+        list-style-type: none;
     }
         .footer_menu ul li {
             width: 50%;
-            display: inline-block;
+            padding: 0.5rem 1rem;
         }
             .footer_menu li a {
-                display: inline-block;
-                padding: 0.5rem 1rem;
                 font-family: "Myriad Pro", Myriad, "Liberation Sans", "Nimbus Sans L", "Helvetica Neue", Helvetica, Arial, sans-serif;
                 font-size: 1.25rem;
                 color: white;
